# ms2rescore-dmo-op

./: .readthedocs.yml  README.md  ms2rescore.spec  pyproject.toml
.github/workflows/: publish.yml  test.yml
ms2rescore/: __main__.py  config_parser.py  core.py  parse_psms.py  parse_spectra.py
ms2rescore/feature_generators/: im2deep.py
ms2rescore/gui/: __main__.py  app.py
ms2rescore/report/: charts.py  generate.py
ms2rescore/report/templates/: base.html
ms2rescore/rescoring_engines/: fix_pin_terminal_mods.py  fix_pout_terminal_mods.py  percolator.py
tests/: test_config_parser.py  test_parse_psms.py  test_parse_spectra.py
