[project]
name = "ms2rescore"
version = "3.2.0.post1"
description = " Modular and user-friendly platform for AI-assisted rescoring of peptide identifications."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "MS2Rescore",
    "MS2PIP",
    "DeepLC",
    "Percolator",
    "proteomics",
    "mass spectrometry",
    "peptide identification",
    "rescoring",
    "machine learning",
]
authors = [
    { name = "Ralf Gabriels", email = "ralf@gabriels.dev" },
    { name = "Arthur Declercq", email = "arthur.declercq@ugent.be" },
    { name = "Ana Sílvia C. Silva" },
    { name = "Robbin Bouwmeester" },
    { name = "Louise Buur" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.10"
dependencies = [
    "cascade-config>=0.4.0",
    "click>=7",
    "customtkinter>=5,<6",
    "deeplc>=3.1",
    "deeplcretrainer",
    "im2deep>=0.3.1",
    "jinja2>=3",
    "lxml>=4.5",
    "mokapot==0.10",                     # 0.11.0 will introduce API changes
    "ms2pip>=4.0.0",
    "ms2rescore_rs>=0.4.3",
    "numpy>=1.25",
    "packaging>=25.0",
    "pandas>=1",
    "plotly>=5",
    "psm_utils>=1.1",
    "pyteomics>=4.7.2",
    "rich>=12",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
ionmob = ["ionmob>=0.2", "tensorflow"]
idxml = ["pyopenms>=3.3"]

[dependency-groups]
dev = ["ruff", "black", "pytest>=8.4.2", "pytest-cov", "pre-commit>=4.3.0"]
docs = [
    "sphinx",
    "myst-parser",
    "nbsphinx",
    "numpydoc>=1,<2",
    "semver>=2",
    "sphinx_inline_tabs",
    "sphinx_rtd_theme",
    "sphinx-argparse",
    "sphinx-autobuild",
    "toml",
]

[project.urls]
GitHub = "https://github.com/compomics/ms2rescore"
ReadTheDocs = "https://ms2rescore.readthedocs.io"
PyPi = "https://pypi.org/project/ms2rescore/"
CompOmics = "https://www.compomics.com"

[project.scripts]
ms2rescore = "ms2rescore.__main__:main"
ms2rescore-gui = "ms2rescore.gui.__main__:main"
ms2rescore-report = "ms2rescore.report.__main__:main"
tims2rescore = "ms2rescore.__main__:main_tims"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ms2rescore"
module-root = ""

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ['py39']

[tool.ruff]
line-length = 99
target-version = 'py39'

[tool.ruff.lint]
extend-select = ["T201", "T203"]
